Add typography section

--- a/src/common/styles/bicycle/common/_variables.scss
+++ b/src/common/styles/bicycle/common/_variables.scss
@@ -47,7 +47,7 @@ $error:                   $red !default;
 
 /* Gray Colors */
 
-$light-gray:              #fefefe !default;
+$light-gray:              #eceeef !default;
 $medium-gray:             #BDB9BD !default;
 $dark-gray:               #333333 !default;
 
