--- a/src/common/styles/code.scss
+++ b/src/common/styles/code.scss
@@ -1,6 +1,6 @@
 .line-numbers {
   position: relative;
-  margin: 15px 0 25px;
+  margin: 0 0 25px;
   padding: 20px 10px;
   border: 1px solid #eceeef;
   background-color: #fafafa;
@@ -58,5 +58,5 @@
   size: 12px;
   background: url("../img/copy.svg") no-repeat center;
   background-size: contain;
-  margin-right: 5px;
+  margin: -1px 5px 0 0;
 }
