--- a/src/common/styles/fonts.scss
+++ b/src/common/styles/fonts.scss
@@ -28,5 +28,28 @@
   url('../fonts/lato/regular/lato-regular.svg#latoregular') format('svg');
   font-weight: normal;
   font-style: normal;
+}
 
+@font-face {
+  font-family: 'lato';
+  src: url('../fonts/lato/bold/lato-bold.eot');
+  src: url('../fonts/lato/bold/lato-bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/lato/bold/lato-bold.woff2') format('woff2'),
+  url('../fonts/lato/bold/lato-bold.woff') format('woff'),
+  url('../fonts/lato/bold/lato-bold.ttf') format('truetype'),
+  url('../fonts/lato/bold/lato-bold.svg#latoregular') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'lato';
+  src: url('../fonts/lato/black/lato-black.eot');
+  src: url('../fonts/lato/black/lato-black.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/lato/black/lato-black.woff2') format('woff2'),
+  url('../fonts/lato/black/lato-black.woff') format('woff'),
+  url('../fonts/lato/black/lato-black.ttf') format('truetype'),
+  url('../fonts/lato/black/lato-black.svg#latoregular') format('svg');
+  font-weight: 900;
+  font-style: normal;
 }
