--- a/src/css/styles/grid.scss
+++ b/src/css/styles/grid.scss
@@ -1,15 +1,13 @@
 .table {
   width: 100%;
   text-align: center;
-  margin-top: 30px;
-  background: $white;
 
   > thead > tr > th, > tbody > tr > td {
     padding: 10px;
-    border: 1px solid $default;
+    border: 1px solid #dfe3e9;
   }
 
   > thead > tr > th {
-    background: $body-background-color;
+    background-color: $light-gray;
   }
 }
