--- a/src/common/layout/styles/footer.scss
+++ b/src/common/layout/styles/footer.scss
@@ -2,6 +2,7 @@
   position: relative;
   padding: 150px 0 100px;
   overflow: hidden;
+  margin-top: 30px;
   background-image: linear-gradient(45deg, $purple 0%, $light-blue 51% , $purple 100%);
   background-size: 200% auto;
   text-align: center;
