Add text wrapping

--- a/src/common/styles/bicycle/helper/_position.scss
+++ b/src/common/styles/bicycle/helper/_position.scss
@@ -2,7 +2,7 @@
 
 /* Variables */
 
-$positions: static, relative, absolte, fixed;
+$positions: static, relative, absolute, fixed;
 
 /* Border Classes */
 
