--- a/src/common/styles/bicycle/flex/_variables.scss
+++ b/src/common/styles/bicycle/flex/_variables.scss
@@ -5,7 +5,7 @@ $flex-direction: (
         column: column,
         row-reverse: row-reverse,
         column-reverse: column-reverse,
-);
+) !default;
 
 $flex-justify: (
         start: flex-start,
@@ -13,11 +13,17 @@ $flex-justify: (
         center: center,
         between: space-between,
         around: space-around,
-);
+) !default;
 
 $flex-align: (
         start: flex-start,
         end: flex-end,
         center: center,
         stretch: stretch,
-);
+) !default;
+
+$flex-wrap: (
+        wrap: wrap,
+        nowrap: nowrap,
+        wrap-reverse: wrap-reverse
+) !default;
