--- a/src/common/styles/bicycle/common/_variables.scss
+++ b/src/common/styles/bicycle/common/_variables.scss
@@ -44,6 +44,7 @@ $default:                 #b4b7c6 !default;
 $info:                    $light-blue !default;
 $success:                 $green !default;
 $error:                   $red !default;
+$warning:                 $yellow !default;
 
 /* Gray Colors */
 
